# -bazel_unit_testing

./: .bazelrc  MODULE.bazel  bazel-bazel_unit_testing  maven_install.json
app/hellotest/: BUILD.bazel
app/hellotest/src/main/java/com/hellotest/: HelloTestMain.java
app/hellotest/src/test/java/com/hellotest/: HelloTestMainTest.java
